--- a/build.gradle
+++ b/build.gradle
@@ -24,8 +24,10 @@ configurations {
 dependencies {
     compile "org.springframework.boot:spring-boot-starter-web"
     compile "org.springframework.boot:spring-boot-starter-undertow"
+    compile "io.jmnarloch:rxjava-spring-boot-starter:2.0.0"
     compile "org.springframework.cloud:spring-cloud-starter-hystrix"
     compile "com.netflix.hystrix:hystrix-javanica:1.5.10"
+    compile "io.github.robwin:javaslang-circuitbreaker:0.8.2"
     compile "io.reactivex:rxjava:1.2.7"
     testCompile "org.springframework.boot:spring-boot-starter-test"
     testCompile "org.spockframework:spock-spring:1.0-groovy-2.4"
